# noraneko-winupdater

./: .gitignore  Cargo.toml  README.md  ScheduledTask-Create.ps1  ScheduledTask-Remove.ps1  go.mod  main.go
pkg/config/: config.go  config_test.go
pkg/updater/: updater.go  updater_test.go
src/: config.rs  lib.rs  main.rs  updater.rs
