[package]
name = "noraneko-winupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
time = { version = "0.3.45", features = ["macros", "formatting"] }
ureq = "2.12.1"
walkdir = "2.5.0"
zip = "0.6.6"

[dev-dependencies]
tempfile = "3.24.0"
